# CGSolutions

./: .gitignore  README.md  subtree.bat  tmp.bat
BezierMesh/: index.html  index.js  package.json  tsconfig.json
Delaunay3DTriangulation/: Delaunay.pde  Delaunay3DTriangulation.pde  Line.pde  Main_pde.pde  Tetrahedron.pde  Triangle.pde
OBB/: OBB.sln  README.md
OBB/OBB/: OBB.vcxproj  OBB.vcxproj.filters  SrAlgorithmCreateOBB.cpp  SrAlgorithmCreateOBB.h  SrAlgorithmQuickHull3D.cpp  SrAlgorithmQuickHull3D.h  SrDataType.h  opengl-example.cpp
OBBTree/: CMakeLists.txt
OBBTree/include/: OBBTree.h
OBBTree/src/: OBBTree.cpp  main.cpp
VulkanApplication/: CMakeLists.txt  ReadMe.md  VulkanApplication.cpp  VulkanApplication.h  main.cpp
VulkanApplication/include/: VulkanApplication.h
VulkanApplication/src/: VulkanApplication.cpp
VulkanApplication/vulkan_application/: CMakeLists.txt
VulkanApplication/vulkan_application/header files/: VulkanApplication.h
VulkanApplication/vulkan_application/source files/: VulkanApplication.cpp  main.cpp
VulkanApplication/vulkan_application_qt/: CMakeLists.txt
VulkanApplication/vulkan_application_qt/header files/: Vulkan.h  vulkanwindow.h
VulkanApplication/vulkan_application_qt/source files/: Vulkan.cpp  qmain.cpp  vulkanwindow.cpp
octree_code/: octree.h  octree.hpp  octree.sln  octree.vcxproj  octree.vcxproj.filters
